--- a/road-map-upiita/src/components/Main/Unit.css
+++ b/road-map-upiita/src/components/Main/Unit.css
@@ -5,12 +5,10 @@
     width: 125px;
     height: 5rem;
     white-space: pre-line;
-    font-weight: bold;
     margin-bottom: 0;
     padding: 0 0;
     border: 0.2rem;
-    margin-right: 0.2rem;
-    margin-bottom: 0.2rem;
+    margin-right: 10px;
 }
 
 .unit p {
@@ -20,6 +18,7 @@
 
 .level--1{
     border: solid blue;
+    color: blue;
 }
 
 .level--2{
@@ -28,12 +27,15 @@
 
 .level--3{
     border: dashed red;
+    color: red;
 }
 
 .level--4{
     border: solid brown;
+    color: brown;
 }
 
 .level--5{
-    border: solid purple;
+    border: solid #9B59B6 ;
+    color: #9B59B6 ;
 }
