--- a/road-map-upiita/src/components/Header/Header.css
+++ b/road-map-upiita/src/components/Header/Header.css
@@ -4,4 +4,17 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    /* background-color: #BC9566; */
+    border-bottom: 4px solid black;
 }
+
+.logos {
+    width: 64px;
+    height: 64px;
+}
+
+.logo--ipn {
+    width: 100%;
+    height: 100%;
+}
+
