--- a/road-map-upiita/src/components/App.css
+++ b/road-map-upiita/src/components/App.css
@@ -5,13 +5,27 @@
 }
 
 :root {
-    --bg:#EAEAEA;
+    --bg-primariy:#EAEAEA;
+    --bg-secundary: #474a4d;
     --bg-accent: #C9A675;
-    --text-color:#702F4E;
+
+    --txt-color:#702F4E;
     --nav-size: 60px;
-    --border: 1px solid #474a4d;
+    --border: 4px;
     --border-radious: 8px;
     --speed: 500ms;
+
+    --level-1: blue;
+    --level-2: black;
+    --level-3: red;
+    --level-4: brown;
+    --level-5: #9B59B6;
+
+    --l-1-bd: var(--border) blue solid;
+    --l-2-bd: var(--border) black dotted;
+    --l-3-bd: var(--border) red dashed;
+    --l-4-bd: var(--border) brown solid;
+    --l-5-bd: var(--border) #9B59B6 solid;
 }
 
 body {
@@ -20,7 +34,7 @@ body {
     font-size: 12px;
 }
 
-ul {
+ul, ol {
     list-style: none;
 }
 
