--- a/road-map-upiita/src/components/Main/Main.css
+++ b/road-map-upiita/src/components/Main/Main.css
@@ -1,16 +1,19 @@
 .main{
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    padding: 5em;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(9, auto);
+    grid-template-rows: repeat(9, auto);
+    row-gap: 15px;
 }
 
 .info {
-    position: absolute;
+    cursor: pointer;
+    position: fixed;
     height: 2rem;
     width: 2rem;
-    top: 10px;
-    right: 10px;
+    top: 1em;
+    right: 1em;
 }
 
 .info:hover {
@@ -18,19 +21,20 @@
     transform: scale(1.1);
 }
 
-.info--model {
+.info--model {  
+    position: fixed;    
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: black solid 2px;
-    width: 40em;
+    width: 100vw;
+    height: 100vh;
+    padding: 20%;
     font-size: 1.2rem;
-    position: absolute;
-    background-color: rgba(255,255,255,0.9);
-    padding: 10px;
-    border-radius: 3px;
-    top: calc(10px + 3rem);
-    right: calc(10px + 3rem);
+    background-color: rgba(250, 250, 250, 0.5);
+    backdrop-filter: blur(2px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .info--simb {
