--- a/road-map-upiita/src/components/Main/Semester.css
+++ b/road-map-upiita/src/components/Main/Semester.css
@@ -7,6 +7,9 @@
 }
 
 .semester--unit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 1.2em;
     font-size: 3em;
 }
