--- a/road-map-upiita/src/components/Main/Unit.css
+++ b/road-map-upiita/src/components/Main/Unit.css
@@ -1,4 +1,5 @@
 .unit {
+    cursor: pointer;
     display: flex;
     text-align: center;
     justify-content: center;
@@ -15,7 +16,7 @@
     margin-bottom: 0.7em;
 }
 
-.unit--unselected {
+.unit--selected {
     transition-duration: 300ms;
     filter: blur(2px);
 }
@@ -29,7 +30,6 @@
 }
 
 .unit:hover{
-    cursor: pointer;
     transition-duration: 300ms;
     transform: rotate(-3deg); 
 }
