--- a/road-map-upiita/src/components/Main/Unit.css
+++ b/road-map-upiita/src/components/Main/Unit.css
@@ -6,27 +6,9 @@
     align-items: center;
     flex-direction: column;
     border-radius: 0.5em;
-    width: 9em;
-    height: 5em;
     white-space: pre-line;
-    margin-bottom: 0;
-    padding: 0 0;
-    border: 0.2rem;
-    margin-right: 1em;
-    margin-bottom: 0.7em;
-}
-
-.unit--selected {
-    transition-duration: 300ms;
-    filter: blur(2px);
-}
-
-.unit--linked {
-    box-shadow: 0 0 5px black inset;
-}
-
-.unit--recommended {
-    box-shadow: 0 0 5px red inset;
+    height: 6rem;
+    width: 10rem;
 }
 
 .unit:hover{
