--- a/road-map-upiita/src/components/Main/SetUnits.css
+++ b/road-map-upiita/src/components/Main/SetUnits.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    max-width: 120rem;
     gap: 1rem;
 }
 
@@ -10,6 +11,14 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
     font-size: 3rem;
-    border-right: 2px black dotted;
+    border-right: 2px black solid;
+}
+
+@media (max-width: 480px){
+    .group--number{
+        font-size: 1rem;
+        border-right: none;
+    }
 }
