--- a/road-map-upiita/src/components/Header/Header.css
+++ b/road-map-upiita/src/components/Header/Header.css
@@ -1,8 +1,7 @@
 .header {
-    height: 6em;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     text-align: center;
     /* background-color: #BC9566; */
     border-bottom: 4px solid black;
@@ -18,3 +17,9 @@
     height: 100%;
 }
 
+.navbar--list {
+    font-size: 1.6rem;
+    font-weight: 600;
+    display: flex;
+    gap: 1rem;
+}
