--- a/road-map-upiita/src/components/Main/Dropdown.css
+++ b/road-map-upiita/src/components/Main/Dropdown.css
@@ -1,5 +1,6 @@
 .dropdown {
-    width: 7rem;
+    display: inline-block;
+    font-size: 1.8rem;
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 1rem 2.5rem rgba(0,0,0,.1);
