--- a/road-map-upiita/src/components/Header/Header.css
+++ b/road-map-upiita/src/components/Header/Header.css
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    /* background-color: #BC9566; */
+    height: 8rem;
+    padding: 1rem 0;
     border-bottom: 4px solid black;
 }
 
@@ -13,7 +14,6 @@
 }
 
 .logo--ipn {
-    width: 100%;
     height: 100%;
 }
 
