--- a/road-map-upiita/src/components/Footer/Footer.css
+++ b/road-map-upiita/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
     align-items: center;
     font-size: 1.8rem;
     padding: 2rem;
-    color: blanchedalmond;
+    color: #ffebcd;
     background-color: black;
 }
 
