--- a/road-map-upiita/src/components/Main/Dropdown.css
+++ b/road-map-upiita/src/components/Main/Dropdown.css
@@ -1,5 +1,6 @@
 .dropdown {
-    display: inline-block;
+  position: relative;
+  width: 10rem;
     font-size: 1.8rem;
     text-align: center;
     border-radius: 10px;
