--- a/road-map-upiita/src/components/Main/InfoModal.css
+++ b/road-map-upiita/src/components/Main/InfoModal.css
@@ -1,14 +1,144 @@
-.info--icon{
-    position: fixed;
+.info--icon,
+.close--icon {
+    position: absolute;
     right: 1rem;
     cursor: pointer;
+    transition: transform 300ms;
+}
+
+.close--icon{
+    top: 1rem;
+}
+
+.info--icon:hover,
+.close--icon:hover {
+    transform: scale(1.3);
 }
 
 .info--modal{
-    width: 10rem;
-    height: 10rem;
+    z-index: 1;
+    font-size: 1.6rem;
+    font-weight: 900;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     right: 5rem;
     top: 5rem;
-    background-color: green;
+    background-color: white;
+    padding: 4rem;
+    box-shadow: -5px 5px 10px 1px gray;
+}
+
+
+
+.simboly {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    border: 0.5rem dashed red;
+    border-radius: 1rem;
+}
+
+.simbology--title{
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+
+.simbology--content{
+    display: flex;
+}
+
+.content--info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contents--levels{
+   padding: 1rem; 
+}
+
+.line {
+    position: relative;
+    bottom: 0.5rem;
+    display: inline-block;
+    border-top: solid currentColor;
+    width: 8rem;
+}
+
+.content--info{
+    border: 0.4rem solid black;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.electives{
+    border: 0.5rem solid green;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.electives > p {
+    color: green;
+    font-weight: 900;
+    text-align: center;
+}
+
+.modal-optional{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    border: 0.5rem dashed red;
+    border-radius: 1rem;
+}
+
+.levels--1{
+    color: var(--level-1);
+}
+
+.levels--2{
+    color: var(--level-2);
+}
+
+.levels--3{
+    color: var(--level-3);
+}
+
+.levels--4{
+    color: var(--level-4);
+}
+
+.levels--5{
+    color: var(--level-5);
+}
+
+.optional--1{
+    color: var(--optional-1);
+}
+
+.optional--2{
+    color: var(--optional-2);
+}
+
+.optional--3{
+    color: var(--optional-3);
+}
+
+.optional--4{
+    color: var(--optional-4);
+}
+
+.optional--5{
+    color: var(--optional-5);
+}
+
+.optional--6{
+    color: var(--optional-6);
 }
