--- a/road-map-upiita/src/components/Main/SetUnits.css
+++ b/road-map-upiita/src/components/Main/SetUnits.css
@@ -13,7 +13,8 @@
     width: 100%;
     height: 100%;
     font-size: 3rem;
-    border-right: 2px black solid;
+    /* border-right: 1rem black solid; */
+    box-shadow: 5px 0 5px -2px #888;
 }
 
 @media (max-width: 480px){
