--- a/src/Components/Main/InfoModal/InfoModal.css
+++ b/src/Components/Main/InfoModal/InfoModal.css
@@ -1,21 +1,6 @@
-.info--icon,
-.close--icon {
-    position: absolute;
-    right: 1rem;
-    cursor: pointer;
-    transition: transform 300ms;
-}
-
-.close--icon{
-    top: 1rem;
-}
-
-.info--icon:hover,
-.close--icon:hover {
-    transform: scale(1.3);
-}
-
 .info--modal{
+    width: 84vw;
+    height: 84vh;
     z-index: 1;
     font-size: 1.6rem;
     font-weight: 900;
@@ -25,8 +10,8 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 5rem;
-    top: 5rem;
+    right: 8%;
+    left: 8%;
     background-color: white;
     padding: 4rem;
     box-shadow: -5px 5px 10px 1px gray;
