--- a/src/Components/Main/Dropdown.css
+++ b/src/Components/Main/Dropdown.css
@@ -1,6 +1,6 @@
 .dropdown {
-  position: relative;
-  width: 10rem;
+    position: relative;
+    width: 10rem;
     font-size: 1.8rem;
     text-align: center;
     border-radius: 10px;
@@ -14,6 +14,7 @@
 }
 
 .dp-content {
+    position: absolute;
     padding: 5px;
     border-top: 1px solid #E5E8EC;
 }
