--- a/src/Components/Main/Unit.css
+++ b/src/Components/Main/Unit.css
@@ -1,20 +1,47 @@
-.unit {
-    font-size: 1.2rem;
+.card{
+    font-size: 1.4rem;
+    position: relative;
+    height: 6em;
+    width: 10em;
     cursor: pointer;
+}
+
+.front, 
+.back{
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    transition: transform 500ms linear;
+    border: 0.25rem solid currentColor;
     border-radius: 0.6em;
+}
+
+.front {
+    transform: perspective(600px) rotateY(0deg)
+}
+
+.back {
+    background-color: white;
+    transform: perspective(600px) rotateY(180deg)
+}
+
+/* .card:hover .front{
+    transform: perspective(600px) rotateY(-180deg)
+}
+
+.card:hover .back {
+    transform: perspective(600px) rotateY(0deg)
+} */
+
+.unit {
     white-space: pre-line;
-    height: 7em;
-    width: 11em;
-    overflow: hidden;
-    position: relative;
-    transition-property: transform;
-    transition-duration:  300ms;
-    transition-timing-function: all ease-out;
 }
 
 .unit > p {
@@ -22,20 +49,17 @@
     padding: 0;
 }
 
-.unit:hover{
-    transform: rotate(-3deg);
-}
-
-.unit:active,.unit:focus{
-    transform: translateY(-2rem);
-}
 
 .unit--linked, .unit--recommended{
     filter: none;
 }
 
 .selected{
-    box-shadow: 0 0.3rem 1em 0.1rem currentColor;
+    transform: perspective(600px) rotateY(-180deg)
+}
+
+.selected-back {
+    transform: perspective(600px) rotateY(0deg)
 }
 
 .recommended,
