--- a/src/Components/Main/Dropdown.css
+++ b/src/Components/Main/Dropdown.css
@@ -3,38 +3,28 @@
     width: 10rem;
     font-size: 1.8rem;
     text-align: center;
-    border-radius: 10px;
-    box-shadow: 0 1rem 2.5rem rgba(0,0,0,.1);
-    background-color: white;
+    border-radius: var(--border-sizb-bg);
+    box-shadow: 0 0 0.1rem 0.1rem var(--bg-secundary);
+    background-color: var(--bg-primary);
     cursor: pointer;
 }
 
-.dropdown .dp-btn{
+.dp-btn{
     padding: 1rem;
 }
 
 .dp-content {
     position: absolute;
     padding: 5px;
-    border-top: 1px solid #E5E8EC;
 }
-  
-  .dropdown-header {
-    padding: 15px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
   
   .dp-item {
     padding: 1rem;
-    transition: 300ms;
+    transition: var(--speed-fast);
+    background-color: var(--bg-primary);
+    cursor: pointer;
   }
   
   .dp-item:hover {
-    border-radius: 8px;
     background-color: blanchedalmond;
-    cursor: pointer;
   }
