--- a/src/Components/Main/Unit.css
+++ b/src/Components/Main/Unit.css
@@ -1,9 +1,8 @@
 .card{
     font-size: 1.4rem;
-    position: relative;
     height: 6em;
     width: 10em;
-    cursor: pointer;
+    position: relative;
 }
 
 .front, 
@@ -11,47 +10,22 @@
     overflow: hidden;
     backface-visibility: hidden;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
     text-align: center;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    gap: 0;
     transition: transform 500ms linear;
     border: 0.25rem solid currentColor;
     border-radius: 0.6em;
 }
 
 .front {
+    cursor: pointer;
+    white-space: pre-line;
     transform: perspective(600px) rotateY(0deg)
 }
 
 .back {
-    background-color: white;
     transform: perspective(600px) rotateY(180deg)
-}
-
-/* .card:hover .front{
-    transform: perspective(600px) rotateY(-180deg)
-}
-
-.card:hover .back {
-    transform: perspective(600px) rotateY(0deg)
-} */
-
-.unit {
-    white-space: pre-line;
-}
-
-.unit > p {
-    margin: 0;
-    padding: 0;
-}
-
-
-.unit--linked, .unit--recommended{
-    filter: none;
 }
 
 .selected{
@@ -92,50 +66,6 @@
     transform: rotate(-45deg);      
 }
 
-.optional__level--1{
-    color: #9B59B6;
-}
-
-.optional__level--2{
-    color: brown;
-}
-
-.optional__level--3{
-    color: #22b8cf;
-}
-
-.optional__level--4{
-    color: #69db7c;
-}
-
-.optional__level--5{
-    color: #fab005  ;
-}
-
-.optional__level--6{
-    color: #f06595 ;
-}
-
-.level--1{
-    color: blue;
-}
-
-
-.level--3{
-    color: red;
-}
-
-.level--4{
-    color: brown;
-}
-
-.level--5{
-    color: #9B59B6 ;
-}
-
-.notice {
-    font-size: 1.4rem;
-}
 
 @media (max-width: 480px){
     .unit{
