--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -7,7 +7,7 @@
 :root {
     --bg-primary:#f8f9fa;
     --bg-secundary: #474a4d;
-    --bg-accent: #C9A675;
+    --bg-accent: #ffec99;
 
     --text-color:#212529;
     --text-color-secundary: #dee2e6;
