--- a/src/Components/Main/Dropdown.css
+++ b/src/Components/Main/Dropdown.css
@@ -7,6 +7,8 @@
     box-shadow: 0 0 0.1rem 0.1rem var(--bg-secundary);
     background-color: var(--bg-primary);
     cursor: pointer;
+    z-index: 1;
+    margin: 2rem
 }
 
 .dp-btn{
