--- a/src/Components/Main/Dropdown.css
+++ b/src/Components/Main/Dropdown.css
@@ -1,6 +1,7 @@
 .dropdown {
+  display: inline-block;
     position: relative;
-    width: 10rem;
+    min-width: 20rem;
     font-size: 1.8rem;
     text-align: center;
     border-radius: var(--border-sizb-bg);
@@ -11,12 +12,21 @@
     margin: 2rem
 }
 
-.dp-btn{
-    padding: 1rem;
+.dp-label{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: .5em 1.5em;
+  border: 1px solid #ccc;
+}
+
+.open {
+  transform: rotate(90deg);
 }
 
 .dp-content {
     position: absolute;
+    top: 2rem; 
     padding: 5px;
 }
   
