--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,9 +3,8 @@
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    height: 8rem;
-    padding: 1rem 0;
-    border-bottom: 4px solid black;
+    height: 10vh;
+    background-color: #333;
 }
 
 .logos {
