--- a/src/Components/Main/Aplication/Settings/SettingsDropdown.css
+++ b/src/Components/Main/Aplication/Settings/SettingsDropdown.css
@@ -1,42 +1,20 @@
-.dropdown {
-  display: inline-block;
-    position: relative;
-    min-width: 20rem;
-    font-size: 1.8rem;
-    text-align: center;
-    border-radius: var(--border-sizb-bg);
-    box-shadow: 0 0 0.1rem 0.1rem var(--bg-secundary);
-    background-color: var(--bg-primary);
-    cursor: pointer;
-    z-index: 1;
-    margin: 2rem
-}
-
-.dp-label{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: .5em 1.5em;
-  border: 1px solid #ccc;
-}
-
-.open {
-  transform: rotate(90deg);
-}
-
-.dp-content {
-    position: absolute;
-    top: 2rem; 
-    padding: 5px;
-}
-  
-  .dp-item {
+.dropdown__settings {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    border-bottom: 1px solid #474a4d;
     padding: 1rem;
-    transition: var(--speed-fast);
-    background-color: var(--bg-primary);
-    cursor: pointer;
-  }
-  
-  .dp-item:hover {
-    background-color: blanchedalmond;
-  }
+}
+
+.icon--left{
+    background-color: #bbb;
+    border-radius: 50%;
+    margin-left: auto;
+    cursor: default;
+    filter: brightness(0.7);
+}
+
+.icon--left:hover{
+    filter: brightness(1)
+}
