--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,11 +1,3 @@
-.units-grid{
-    grid-template-columns: 5rem auto;
-}
-
-
-@media (max-width: 480px){
-    .units-grid{
-        grid-template-columns: 1fr;
-        /* background-color: black; */
-    }
+main {
+    font-size: 1.6rem;
 }
