--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -29,6 +29,7 @@ body {
     font-family: 'Roboto', sans-serif, monospace;
     font-weight: 700;
     background-color: var(--bg-primary);
+    min-width: 320px;
 }
 
 ul, li {
