--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -4,7 +4,7 @@
     font-size: 62.5%;
     --bg-primary:#f8f9fa;
     --bg-secundary: #474a4d;
-    --bg-accent: #ffec99;
+    --bg-accent: #ced4da;
     
     --text-color:#212529;
     --text-color-secundary: #dee2e6;
@@ -22,8 +22,6 @@
     padding: 0;
     box-sizing: inherit; 
 }
-
-
 
 body {
     font-family: 'Roboto', sans-serif, monospace;
@@ -53,7 +51,7 @@ a{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.8rem;
 }
 
 .grid__container--center {
@@ -72,12 +70,16 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 3.2rem;
-    height: 3.2rem;
+    width: 4rem;
+    height: 4rem;
     cursor: pointer;
-    padding: 0.5rem;
+    padding: 0.8rem;
 }
 
+.icon--button {
+    border-radius: 50%;
+    background-color: var(--bg-accent);
+}
 .info--icon,
 .pdf--icon:hover,
 .close--icon {
