--- a/src/Components/Main/Aplication/Settings/UnitsSetttings.css
+++ b/src/Components/Main/Aplication/Settings/UnitsSetttings.css
@@ -1,53 +1,56 @@
-.settings {
-    margin-bottom: 1rem;
-    overflow: hidden;
-    transition: height var(--speed) ease;
-    background-color: white;
+.settings{
+    position: absolute;
+    right: 1rem;
+    left: 1rem;
     z-index: 10;
-    position: absolute;  
-    width: 90vw;
-}
-
-.nav__settings{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem 1rem;
-    border: 0.3rem solid #474a4d;
+    background-color: white;
+    font-weight: 400;
+    font-size: 1.8rem;
     border-radius: 1rem;
+    box-shadow: 0 1rem 1rem 0.1rem #ddd;
 }
 
-.dropdown__settings {
+.nav{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.nav-item{
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
-    max-width: 100%;
-    border-bottom: 1px solid #474a4d;
-    padding: 1rem;
     cursor: pointer;
+    border-radius: 4rem;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem 0;
+    transition: background-color 1s;
+}
+
+.nav-item:hover, 
+.nav-item:active{
+    background-color: black;
+}
+
+.nav--text {
+    margin: 0 2rem;
 }
 
 .icon--left{
-    background-color: #bbb;
-    border-radius: 50%;
     margin-left: auto;
-    cursor: default;
 }
 
-.dropdown__settings:hover{
-    background-color: cornsilk;
-}
-
-.dp-menu {
+.nav--secundary{
+    z-index: 20;
     position: absolute;
-    top: 0;
+    top: 5rem;
+    left:5rem;
     background-color: white;
-    display: flex;
-    flex-direction: column;
-    border: 2px solid black;
-    border-radius: 0.2rem;
+    box-shadow: 0 1rem 10rem 10rem #ddd;
+    border-radius: 1rem;
 }
+
 @media only screen and (min-width: 40em) {
     .nav__settings{
         flex-direction: row;
