--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,3 +1,4 @@
+/* App mobile design approach */
 
 :root {
     box-sizing: border-box;
@@ -13,6 +14,7 @@
     --border-radious: 1rem;
     --speed-normal: 500ms;
     --speed-fast: 250ms;
+    --min-width: 32rem;
 }
 
 *,
@@ -28,6 +30,7 @@ body {
     font-weight: 700;
     background-color: var(--bg-primary);
     min-width: 320px;
+    font: 1.6rem;
 }
 
 ul, li {
@@ -41,20 +44,19 @@ p {
 a{
     text-decoration: none;
 }
-.container {
-    position: relative;
-    padding: 1rem;
-}
 
-.flex__container--center {
+.flex-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     gap: 0.8rem;
 }
 
-.grid__container--center {
+.flex-container--center {
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-container--center {
     display: grid;
     align-items: center;
     justify-content: center;
@@ -80,30 +82,24 @@ a{
     border-radius: 50%;
     background-color: var(--bg-accent);
 }
-.info--icon,
-.pdf--icon:hover,
-.close--icon {
+
+.units-grid{
+    grid-template-columns: 1fr;
+    max-width: 130rem;
+}
+
+.icon--pdf {
+    width: 6rem;
+    height: 6rem;
+}
+
+.icon--pdf{
     transition: transform 300ms;
 }
 
-.info--icon {
-    position: fixed;
-}
-.close--icon {
-    position: absolute;
-    right: 1rem;
-}
-
-.info--icon,
-.close--icon{
-    top: 1rem;
-    right: 1rem;
-}
-
-.info--icon:hover,
-.pdf--icon:hover,
-.close--icon:hover {
-    transform: scale(1.4);
+.icon--pdf:hover,
+.icon--pdf:active {
+    transform: scale(1.3);
 }
 
 .optional-1{
@@ -149,3 +145,200 @@ a{
 .is--close{
     display: none !important;
 }
+
+/* Units style render*/
+
+.card{
+    font-size: 1.4rem;
+    height: 6em;
+    width: 10em;
+    position: relative;
+}
+
+.front, 
+.back{
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    text-align: center;
+    flex-direction: column;
+    gap: 0;
+    border: 0.25rem solid currentColor;
+    border-radius: calc( var(--border-radious)* 0.6);
+    transition: transform var(--speed-normal) linear;
+}
+
+.front {
+    padding: 0 0.2rem;
+    cursor: pointer;
+    white-space: pre-line;
+    transform: perspective(600px) rotateY(0deg)
+}
+
+.back {
+    transform: perspective(600px) rotateY(180deg)
+}
+
+.selected{
+    transform: perspective(600px) rotateY(-180deg)
+}
+
+.selected-back {
+    transform: perspective(600px) rotateY(0deg)
+}
+
+.recommended,
+.linked,
+.optional {
+    position: absolute;
+    font-weight: 900;
+    bottom: 0.5rem;
+    width: 6rem;
+}
+
+.recommended {
+    color: #281E01;
+    background-color: #FBC318;
+    left: -1.5rem;
+    transform: rotate(45deg);
+}
+
+.linked {
+    color: #000000;
+    background-color: #F89B9B;
+    right: -1.5rem;
+    transform: rotate(-45deg);
+}
+
+.optional{
+    color: #2b8a3e;
+    background-color: #F89B9B;
+    right: -1.5rem;
+    transform: rotate(-45deg);      
+}
+
+.front::before {  
+    transform: scaleX(0);
+    transform-origin: bottom right;
+}
+  
+.front:hover::before {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+  
+.front::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    background-color: var(--bg-accent);
+    z-index: -1;
+    transition: transform var(--speed-fast) ease;
+  }
+
+  /* Number Indicating group of units */
+
+.group--number{
+    font-size: 3rem;
+    box-shadow: 5px 0 5px -2px #888;
+}
+
+/* Info Modal */
+
+.info--modal{
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    background-color:rgba(0, 0, 0, 0.5);
+}
+
+.info--modal__body {
+    position: fixed;
+    right: 10vw;
+    left: 10vw;
+    top: 10vh;
+    bottom: 10vh;
+    background-color: white;
+    padding: 1rem;
+    border-radius: var(--border-radious);
+}
+
+/* Options bar */ 
+
+.options--bar {
+    justify-content: space-around;
+    position: sticky;
+    background-color: #111111;
+    color: white;
+    bottom: 0;
+    padding: 0.5rem 0;
+}
+
+.options--bar:last-child  {
+    margin-right: auto;
+}
+
+/* Settings of Units */
+
+.settings{
+    position: absolute;
+    width: clamp(var(--min-width), 90%,40rem);
+    left: 1rem;
+    z-index: 10;
+    background-color: white;
+    font-weight: 400;
+    font-size: 1.6rem;
+    border-radius: var(--border-radious);
+    box-shadow: 0 1rem 1rem 0.1rem #ddd;
+}
+
+.nav{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-item{
+    position: relative;
+    cursor: pointer;
+    border-radius:  calc(var(--border-radious)*4);
+    padding: 0.5rem 1rem;
+    margin: 0.5rem 0;
+    transition: background-color var(--speed-fast);
+}
+
+.nav-item:hover, 
+.nav-item:active{
+    background-color: #ddd;
+}
+
+.nav--text {
+    margin: 0 2rem;
+}
+
+.icon--left{
+    margin-left: auto;
+}
+
+.nav--secundary{
+    z-index: 20;
+    position: absolute;
+    top: 5rem;
+    left:5rem;
+    background-color: white;
+    box-shadow: 0 1rem 10rem 10rem #ddd;
+    border-radius: var(--border-radious);
+}
+
+
+/* Desktop queries */
+
+@media only screen and (min-width: 40em) {
+    .nav__settings{
+        flex-direction: row;
+    }
+  }
