--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -64,6 +64,12 @@ a{
     gap: 1rem;
 }
 
+.btn {
+    border: none;
+    border-radius: var(--border-size);
+    padding: 0 1rem;
+}
+
 .parent--space {
     width: 100%;
     height: 100%;
@@ -158,6 +164,9 @@ a{
 }
 .application {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 /* Units style render*/
 
@@ -293,61 +302,70 @@ a{
 
 /* Settings of Units */
 
-.nav-container{
-    font-weight: 500;
-    height: 10rem;
+.settings {
+    padding: 1rem;
+    max-width: 40rem;
+    justify-content: space-around;
 }
 
-.nav{
+.settings > div{
+    align-self: auto;
+}
+
+.btn--settings {
+
+}
+
+.sidebar--nav {
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-weight: 400;
-    font-size: 1.6rem;
+    flex-direction: column;
+    padding: 1rem;
+    gap: 1rem;
 }
 
-.nav-item{
-    cursor: pointer;
-    border-radius: var(--border-size);
-    border: solid #ddd 0.2rem;
-    padding: 1rem 1.5rem;
-    transition: background-color var(--speed-fast);
-    width: calc(40% - 5px);
+.sidebar--nav--item {
+    background-color: green;
 }
 
-.nav-icon {
-    border-radius: var(--border-size);
-    border:solid 0.2rem #bbb;
+.sidebar--container{
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    height: 100vh;
+    width: 25rem;
+    font-size: 2rem;
+    background-color:white;
+    box-shadow: 0 0 1rem 1rem #aaa;
+
+    border-radius: var(--border-size-bg);
 }
 
-.nav-item:hover, 
-.nav-item:active{
-    background-color: #ddd;
+
+.sidebar--container-l{
+    left: -100%;
+    transition: left var(--speed-normal);
+}
+
+.sidebar--container-l.active {
+    left: 0;
+}
+
+.sidebar--container-r{
+    right: -100%;
+    transition: right var(--speed-normal);
+}
+
+.sidebar--container-r.active {
+    right: 0;
 }
 
 .icon--left{
     margin-left: auto;
 }
 
-.nav--secundary{
-    height: 100vh;
-    position: absolute;
-    top: -1rem;
-    width: 50%;
-    z-index: 20;
-    background-color: white;
-    box-shadow: 0 1rem 10rem 10rem #ddd;
-    border-radius: var(--border-radious);
+.icon--right{
+    margin-right: auto;
 }
-
-.left {
-    left: 0;
-}
-
-.right {
-    right: 0;
-}
-/* UI Components */
 
 .waiting-room{
     width: 100%;
@@ -358,7 +376,6 @@ a{
     text-align: center;
     font-size: 6.4rem;
 }
-
 
 /* Desktop queries */
 
