--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,19 +1,18 @@
 .header {
+    color: white;
+    font-size: 1.6rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    height: 10vh;
     background-color: #333;
 }
 
-.logos {
-    width: 64px;
-    height: 64px;
-}
-
-.logo--ipn {
-    height: 100%;
+.navbar {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .navbar--list {
@@ -21,4 +20,9 @@
     font-weight: 600;
     display: flex;
     gap: 1rem;
+}
+
+.nav--item {
+    color: white;
+    text-decoration: none;
 }
