--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -31,19 +31,20 @@ body {
     font-weight: 700;
     background-color: var(--bg-primary);
     min-width: 320px;
-    font: 1.6rem;
+    font-size: 1.6rem;
+    font-weight: 500;
 }
 
 ul, li {
     list-style: none;
 }
 
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
 p {
     text-align: center;
-}
-
-a{
-    text-decoration: none;
 }
 
 .flex-container{
@@ -65,9 +66,16 @@ a{
 }
 
 .btn {
+    font-size: 2rem;
+    height: 6.4rem;
     border: none;
     border-radius: var(--border-size);
+    background-color: white;
     padding: 0 1rem;
+}
+
+.btn:hover {
+    background-color: #aaa;
 }
 
 .parent--space {
@@ -94,6 +102,10 @@ a{
 .icon--button {
     border-radius: 50%;
     background-color: var(--bg-accent);
+}
+
+.flip {
+    transform: rotate(90deg);
 }
 
 .units-grid{
@@ -160,12 +172,12 @@ a{
 }
 
 .main {
-    padding: 0 10px;
+    width: 100%;
 }
+
 .application {
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    max-width: 144rem;
     align-items: center;
 }
 /* Units style render*/
@@ -195,6 +207,25 @@ a{
     cursor: pointer;
     white-space: pre-line;
     transform: perspective(600px) rotateY(0deg)
+}
+
+.front::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+   height: 0;
+    background-color: currentColor;
+    opacity: 0.2;
+    z-index: -1;
+    border-radius: 0 0 50% 50%;
+    overflow: hidden;
+    transition: height var(--speed-normal);
+}
+
+.front:hover::before {
+    height: 100%;
 }
 
 .back {
@@ -238,26 +269,6 @@ a{
     right: -1.5rem;
     transform: rotate(-45deg);      
 }
-
-.front::before {  
-    transform: scaleX(0);
-    transform-origin: bottom right;
-}
-  
-.front:hover::before {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-  
-.front::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    background-color: var(--bg-accent);
-    z-index: -1;
-    transition: transform var(--speed-fast) ease;
-  }
 
   /* Number Indicating group of units */
 
@@ -329,6 +340,9 @@ a{
 
 .sidebar--container{
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     top: 0;
     z-index: 100;
     height: 100vh;
@@ -377,7 +391,32 @@ a{
     font-size: 6.4rem;
 }
 
+
+.tab--container {
+    margin: 1rem 0;
+}
+
+.tab--header {
+    margin-left:2rem;
+    align-self: start;
+    gap:0;
+}
+
+.tab-header--item {
+    cursor: pointer;
+    width: 10rem;
+    height: 5rem;
+    background-color: #ddd;
+    border-radius: var(--border-size);
+}
+
+.tab-header--item.active {
+    background-color: var(--bg-primary);
+    border-top: 0.3rem solid blue;
+    transform: scale(1.1);
+}
 /* Desktop queries */
+
 
 @media only screen and (min-width: 40em) {
     .nav__settings{
