--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -51,11 +51,11 @@ p {
     display: flex;
     flex-wrap: wrap;
     gap: 0.8rem;
+    align-items: center;
 }
 
 .flex-container--center {
     justify-content: center;
-    align-items: center;
 }
 
 .grid-container--center {
@@ -63,6 +63,12 @@ p {
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+
+.group--button {
+    margin-top:2rem;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .btn {
@@ -97,6 +103,10 @@ p {
     width: 3rem;
     height: 3rem;
     padding: 0.5rem;
+}
+
+.ml{
+    margin-left: 1rem;
 }
 
 .icon--button {
@@ -177,7 +187,7 @@ p {
 
 .application {
     min-height: 100vh;
-    max-width: 144rem;
+    max-width: 120rem;
     align-items: center;
 }
 /* Units style render*/
@@ -396,9 +406,14 @@ p {
 }
 
 .tab--header {
+    justify-content: space-between;
     margin-left:2rem;
     align-self: start;
     gap:0;
+}
+
+.tab--options {
+    justify-content: space-evenly;
 }
 
 .tab-header--item {
