--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -31,7 +31,7 @@ body {
     font-weight: 700;
     background-color: var(--bg-primary);
     min-width: 320px;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     font-weight: 500;
 }
 
@@ -71,12 +71,49 @@ p {
     justify-content: space-evenly;
 }
 
+.txt-24 {
+    font-size: 2.4rem;
+}
+
+.txt--center {
+    text-align: center;
+}
+
 .btn {
-    height: 6.4rem;
     border: none;
     border-radius: var(--border-size);
     background-color: white;
     padding: 0 1rem;
+}
+
+
+.btn--career {
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+
+.btn--option {
+    color: #777;
+    border: 0.2rem solid #aaa;
+}
+
+.home-page {
+    margin-top: 4rem;
+    max-width: 108rem;
+}
+
+.hp--title {
+    font-size: 6.4rem;
+    text-align: center;
+}
+
+.hp--text {
+    font-size: 1.6rem;
+    text-align: start;
+}
+.hp--careers{ 
+    margin: 3rem 0;
 }
 
 .btn:hover {
@@ -106,6 +143,14 @@ p {
 
 .ml{
     margin-left: 1rem;
+}
+
+.mt{
+    margin-top: 1rem
+}
+
+.mb {
+    margin-bottom: 4rem;
 }
 
 .icon--button {
@@ -181,7 +226,8 @@ p {
 }
 
 .main {
-    width: 100%;
+    margin: 0 1.5rem;
+    font-size: 1.4rem;
 }
 
 .application {
@@ -307,78 +353,6 @@ p {
     border-radius: var(--border-radious);
 }
 
-/* Options bar */ 
-
-.options--bar {
-    justify-content: space-around;
-    position: sticky;
-    background-color: #111111;
-    color: white;
-    bottom: 0;
-    padding: 0.5rem 0;
-}
-
-/* Settings of Units */
-
-.settings {
-    padding: 1rem;
-    max-width: 40rem;
-    justify-content: space-around;
-}
-
-.settings > div{
-    align-self: auto;
-}
-
-/* .btn--settings {
-
-} */
-
-.sidebar--nav {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 1rem;
-}
-
-.sidebar--nav--item {
-    background-color: green;
-}
-
-.sidebar--container{
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    top: 0;
-    z-index: 100;
-    height: 100vh;
-    width: 25rem;
-    background-color:white;
-    box-shadow: 0 0 1rem 1rem #aaa;
-
-    border-radius: var(--border-size-bg);
-}
-
-
-.sidebar--container-l{
-    left: -100%;
-    transition: left var(--speed-normal);
-}
-
-.sidebar--container-l.active {
-    left: 0;
-}
-
-.sidebar--container-r{
-    right: -100%;
-    transition: right var(--speed-normal);
-}
-
-.sidebar--container-r.active {
-    right: 0;
-}
-
 .icon--left{
     margin-left: auto;
 }
@@ -387,35 +361,23 @@ p {
     margin-right: auto;
 }
 
-.waiting-room{
-    width: 100%;
-}
-
-.waiting-text{
-    color: #555;
-    text-align: center;
-    font-size: 6.4rem;
-}
-
-
 .tab--container {
     margin: 1rem 0;
 }
 
 .tab--header {
     justify-content: space-between;
-    margin-left:2rem;
-    align-self: start;
     gap:0;
 }
 
 .tab--options {
+    align-self:flex-end;
     justify-content: space-evenly;
 }
 
 .tab-header--item {
     cursor: pointer;
-    width: 10rem;
+    width: 8rem;
     height: 5rem;
     background-color: #ddd;
     border-radius: var(--border-size);
