--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,8 @@
 .header {
     font-size: 2.4rem;
+    height: 8rem;
+    position: relative;
+    z-index: 100;
 }
 
 .navbar {
@@ -12,6 +15,8 @@
     justify-content: space-between;
 }
 .navbar--active {
+    position: absolute;
+    top: 8rem;
     width: 100%;
     display: flex;
     flex-direction: column;
